parte sinistra footer

--- a/index.html
+++ b/index.html
@@ -373,22 +373,22 @@
 
     <footer>
         <div class="right-contaienr-footer">
-            <div>
-                img 
+            <div class="img">
+                <img src="https://i.scdn.co/image/ab67616d0000b2733ed52339ae78ac1b695e8d80" alt="">
             </div> 
-            <div>
+            <div style="display: flex;  flex-direction: column;justify-content: center;">
                 <h4>
-                    brano nome
+                    Society
                 </h4>
-                <h4>
-                    autore nome
-                </h4>
+                <h5>
+                    Eddie Vedder
+                </h5>
             </div>
             <div>
-                icona 
+                <i class="fa-regular fa-heart" style="color: #76787D; padding: 0 20px;"></i>
             </div>
             <div>
-                icona 
+                <i class="fa-regular fa-folder" style="color: #76787D;"></i> 
             </div>
         </div>
 
