fine struttura e contenuto + qualche hover

--- a/index.html
+++ b/index.html
@@ -394,7 +394,21 @@
 
         <div class="mid-footer-container">
             <div class="mid-icon-footer">
-                icona icona icona icona
+                <span>
+                    <i class="fa-solid fa-shuffle" style="color: #ffffff;"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-forward-step fa-rotate-180" style="color: #ffffff;"></i>
+                </span>
+                <span>
+                    <i class="fa-regular fa-circle-play" style="color: #ffffff; font-size: 1em;"></i>                </span>
+                <span>
+                    <i class="fa-solid fa-forward-step" style="color: #ffffff;"></i>
+                </span>
+                <span>
+                    <i class="fa-solid fa-arrow-rotate-right" style="color: #ffffff;"></i>
+                </span>
+
             </div>
             <div class="playbar">
                 
@@ -412,7 +426,25 @@
         </div>
 
         <div class="left-contaienr-footer" >   
-            icona icona icona playbar
+           <span>
+            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+           </span>
+           <span>
+            <i class="fa-solid fa-tv" style="color: #ffffff;"></i>
+           </span>
+           <span>
+            <i class="fa-solid fa-volume-high" style="color: #ffffff;"></i>           </span>
+           <span>
+            <div class="playbar">
+                <span class="bar">
+                    <div class="left-bar-2">
+
+                    </div>
+                    <div  class="right-bar-2">
+
+                    </div>
+            </div>
+           </span>
         </div>
 
     </footer>
